Add Début défilement

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </a>
                 <button>
                   <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
+                  <i class="fas fa-heart filled-heart"></i>
                 </button>
               </article>
               <article>
@@ -124,7 +124,7 @@
                 </a>
                 <button>
                   <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
+                  <i class="fas fa-heart filled-heart"></i>
                 </button>
               </article>
               <article>
@@ -140,7 +140,7 @@
                 </a>
                 <button>
                   <i class="far fa-heart"></i>
-                  <i class="fas fa-heart"></i>
+                  <i class="fas fa-heart filled-heart"></i>
                 </button>
               </article>
             </div>
